# prof-reviewer

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt  start.bat  start.sh
.streamlit/: config.toml
prompts/stages/1-overview/: general-overview.md
prompts/stages/1-task-understanding/: task-understanding.md
prompts/stages/2-assessement/: pre-scoring-assessement-prompt.md  scoring-assessement-prompt.md
prompts/stages/2-assessement/communicative-achievement/: descriptor.md
prompts/stages/2-assessement/content/: definition.md  descriptor.md
prompts/stages/2-assessement/language/: descriptor.md
prompts/stages/2-assessement/organisation/: descriptor.md
prompts/stages/2-task-understanding/: task-understanding.md
prompts/stages/3-assessement/: pre-scoring-format.md  scoring-format.md
prompts/stages/3-assessement/communicative-achievement/: comm-achieve-definition.md  comm-achieve-descriptor.md
prompts/stages/3-assessement/language/: language-definition.md
prompts/stages/3-assessement/organisation/: organisation-definition.md  organisation-descriptor.md
prompts/stages/4-detailed-analysis/: detailed-analysis.md
prompts/stages/5-final-comments/: general-comment.md
prompts/stages/6-encouraging-comment/: encouraging-comment.md
src/: __init__.py
src/app/: Home.py
src/app/pages/: 01_Analysis.py  02_History.py
src/ocr/: ocr.py
src/openai/: client.py
src/pipeline/: assessement.py  main_pipe.py
utils/: logger.py
